--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
 <head>
     @@include('./_index-head.html', {
         "path": ".",
-        "title": "INDEX",
-        "description": "META information",
-        "keywords": "META keywords"
+        "title": "Panou Publicitar LED - Outdoor Advertising | CharismaMedia",
+        "description": "Servicii de Outdoor Advertising prin panou publicitar LED in Cluj si Fagaras oferite de CharismaMedia",
+        "keywords": "outdoor advertising, outdoor media, publicitate outdoor, panou publicitar LED, publicitate in Cluj, public"
     })
 </head> 
 <body class="loaded">
