--- a/src/panou-publicitar-cluj.html
+++ b/src/panou-publicitar-cluj.html
@@ -4,9 +4,9 @@
 <head>
     @@include('./_servicii-head.html', {
         "path": ".",
-        "title": "INDEX",
-        "description": "META information",
-        "keywords": "META keywords"
+        "title": "Panou Publicitar LED - Cluj VIVO Mall | CharismaMedia",
+        "description": "Servicii de Outdoor Advertising prin panou publicitar LED in Cluj, zona VIVO Mall.",
+        "keywords": "outdoor advertising cluj, outdoor media cluj, publicitate outdoor cluj, panou publicitar LED cluj, publicitate in Cluj, public"
     })
 </head>
 
@@ -38,7 +38,7 @@
         "path": "."
     })
 
-    @@include('./_servicii-scripts.html', {
+    @@include('./_servicii-cluj-scripts.html', {
         "path": "."
     })
 
