--- a/src/contact.html
+++ b/src/contact.html
@@ -4,9 +4,9 @@
 <head>
     @@include('./_contact-us-head.html', {
         "path": ".",
-        "title": "INDEX",
-        "description": "META information",
-        "keywords": "META keywords"
+        "title": "Panou Publicitar LED - Contact, Cere Oferta | CharismaMedia",
+        "description": "Contact, Cere Oferta - Servicii de Outdoor Advertising prin panou publicitar LED in Cluj si Fagaras oferite de CharismaMedia",
+        "keywords": "contact, cere oferta outdoor advertising, outdoor advertising, outdoor media, publicitate outdoor, panou publicitar LED, publicitate in Cluj, public"
     })
 </head>
 
@@ -16,8 +16,7 @@
 
         @@include('./_common-navigation.html', {
             "path": "."
-        })
-
+        }) 
 
         @@include('./_contact-us-content.html', {
             "path": "."
