--- a/src/panou-publicitar-fagaras.html
+++ b/src/panou-publicitar-fagaras.html
@@ -4,9 +4,9 @@
 <head>
     @@include('./_servicii-head.html', {
         "path": ".",
-        "title": "INDEX",
-        "description": "META information",
-        "keywords": "META keywords"
+        "title": "Panou Publicitar LED - Fagaras | CharismaMedia",
+        "description": "Servicii de Outdoor Advertising prin panou publicitar LED in Fagaras, zona centrala.",
+        "keywords": "outdoor advertising Fagaras, outdoor media Fagaras, publicitate outdoor Fagaras, panou publicitar LED Fagaras, publicitate in Fagaras, public"
     })
 </head>
 
@@ -38,7 +38,7 @@
         "path": "."
     })
 
-    @@include('./_servicii-scripts.html', {
+    @@include('./_servicii-fagaras-scripts.html', {
         "path": "."
     })
 
