--- a/src/publicitate-outdoor-intrebari.html
+++ b/src/publicitate-outdoor-intrebari.html
@@ -4,9 +4,9 @@
 <head>
     @@include('./_faq-head.html', {
         "path": ".",
-        "title": "INDEX",
-        "description": "META information",
-        "keywords": "META keywords"
+        "title": "Panou Publicitar LED - Intrebari Frecvente | CharismaMedia",
+        "description": "Intrebari Frecvente - Servicii de Outdoor Advertising prin panou publicitar LED in Cluj si Fagaras oferite de CharismaMedia",
+        "keywords": "faq, intrebari frecvente, intrebari outdoor advertising, outdoor advertising, outdoor media, publicitate outdoor, panou publicitar LED, publicitate in Cluj, public"
     })
 </head>
 
