--- a/src/panou-publicitar-cluj.html
+++ b/src/panou-publicitar-cluj.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    @@include('./_servicii-head.html', {
+    @@include('./_servicii-cluj-head.html', {
         "path": ".",
         "title": "Panou Publicitar LED - Cluj VIVO Mall | CharismaMedia",
         "description": "Servicii de Outdoor Advertising prin panou publicitar LED in Cluj, zona VIVO Mall.",
