--- a/src/panou-publicitar-fagaras.html
+++ b/src/panou-publicitar-fagaras.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    @@include('./_servicii-head.html', {
+    @@include('./_servicii-fagaras-head.html', {
         "path": ".",
         "title": "Panou Publicitar LED - Fagaras | CharismaMedia",
         "description": "Servicii de Outdoor Advertising prin panou publicitar LED in Fagaras, zona centrala.",
