Update for LIVE

--- a/src/contact.html
+++ b/src/contact.html
@@ -5,8 +5,8 @@
     @@include('./_contact-us-head.html', {
         "path": ".",
         "title": "Panou Publicitar LED - Contact, Cere Oferta | CharismaMedia",
-        "description": "Contact, Cere Oferta - Servicii de Outdoor Advertising prin panou publicitar LED in Cluj si Fagaras oferite de CharismaMedia",
-        "keywords": "contact, cere oferta outdoor advertising, outdoor advertising, outdoor media, publicitate outdoor, panou publicitar LED, publicitate in Cluj, public"
+        "description": "Contact, Cere Oferta - Servicii de Outdoor Advertising prin panou publicitar LED in Cluj-Napoca si Fagaras oferite de CharismaMedia",
+        "keywords": "contact, cere oferta outdoor advertising, outdoor advertising, outdoor media, publicitate outdoor, panou publicitar LED, publicitate in Cluj-Napoca, public"
     })
 </head>
 
