--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     @@include('./_index-head.html', {
         "path": ".",
         "title": "Panou Publicitar LED - Outdoor Advertising | CharismaMedia",
-        "description": "Servicii de Outdoor Advertising prin panou publicitar LED in Cluj si Fagaras oferite de CharismaMedia",
+        "description": "Servicii de Outdoor Advertising prin panou publicitar LED in Cluj-Napoca si Fagaras oferite de CharismaMedia",
         "keywords": "outdoor advertising, outdoor media, publicitate outdoor, panou publicitar LED, publicitate in Cluj, public"
     })
 </head> 
