--- a/src/panou-publicitar-cluj.html
+++ b/src/panou-publicitar-cluj.html
@@ -4,9 +4,9 @@
 <head>
     @@include('./_servicii-cluj-head.html', {
         "path": ".",
-        "title": "Panou Publicitar LED - Cluj VIVO Mall | CharismaMedia",
-        "description": "Servicii de Outdoor Advertising prin panou publicitar LED in Cluj, zona VIVO Mall.",
-        "keywords": "outdoor advertising cluj, outdoor media cluj, publicitate outdoor cluj, panou publicitar LED cluj, publicitate in Cluj, public"
+        "title": "Panou Publicitar LED - Cluj-Napoca VIVO Mall | CharismaMedia",
+        "description": "Servicii de Outdoor Advertising prin panou publicitar LED in Cluj-Napoca, zona VIVO Mall.",
+        "keywords": "outdoor advertising cluj, outdoor media cluj, publicitate outdoor cluj, panou publicitar LED cluj, publicitate in Cluj-Napoca, public"
     })
 </head>
 
