--- a/src/publicitate-outdoor-intrebari.html
+++ b/src/publicitate-outdoor-intrebari.html
@@ -5,8 +5,8 @@
     @@include('./_faq-head.html', {
         "path": ".",
         "title": "Panou Publicitar LED - Intrebari Frecvente | CharismaMedia",
-        "description": "Intrebari Frecvente - Servicii de Outdoor Advertising prin panou publicitar LED in Cluj si Fagaras oferite de CharismaMedia",
-        "keywords": "faq, intrebari frecvente, intrebari outdoor advertising, outdoor advertising, outdoor media, publicitate outdoor, panou publicitar LED, publicitate in Cluj, public"
+        "description": "Intrebari Frecvente - Servicii de Outdoor Advertising prin panou publicitar LED in Cluj-Napoca si Fagaras oferite de CharismaMedia",
+        "keywords": "faq, intrebari frecvente, intrebari outdoor advertising, outdoor advertising, outdoor media, publicitate outdoor, panou publicitar LED, publicitate in Cluj-Napoca, public"
     })
 </head>
 
